Grails-3.3.2 upgrade continuation.